# kuavo-xjtu-controller

./: .gitignore  CHANGELOG.md  README.en.md  README.md  docusaurus.config.js  readme.md  readme_origin.md  readme_wty.md
docker/: Dockerfile  build.sh  build_mujoco.sh  install_docker.sh  readme.md  run.sh
docs/: Quest3_VR_basic.md  sidebars.js  运动控制API.md
docs/硬件基本设置/: README.md
installed/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
installed/include/humanoid_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
installed/include/humanoid_interface/: HumanoidInterface.h  HumanoidPreComputation.h
installed/include/humanoid_interface/command/: HumanoidHandTarget.h
installed/include/humanoid_interface/common/: ModelSettings.h  recorder.h
installed/include/humanoid_interface_drake/: humanoid_interface_drake.h
installed/include/humanoid_interface_ros/: uwbdebug.h
installed/include/humanoid_wbc/: WbcBase.h  WeightedWbc.h
installed/lib/humanoid_interface_ros/: humanoid_Arm_time_target_control  humanoid_gait_command
installed/lib/pkgconfig/: hardware_node.pc  humanoid_estimation.pc  humanoid_interface.pc  humanoid_interface_drake.pc  humanoid_interface_ros.pc  humanoid_wbc.pc
installed/share/hardware_node/: package.xml
installed/share/hardware_node/lib/ruiwo_controller/: CMakeLists.txt  Negtive.py  Negtive.sh  Setzero.py  Setzero.sh  SimpleSDK.py  config.yaml  ruiwo_actuator.cpp  ruiwo_actuator.h  ruiwo_actuator.py  setMotorZero.py  setMultiturnEncoderZero.py  setMultiturnEncoderZero.sh  setZero.sh
installed/share/hardware_node/lib/ruiwo_controller/python-can-3.3.4/can/interfaces/bmcan/: canlib.py
installed/share/humanoid_interface_drake/: package.xml
installed/share/humanoid_interface_ros/: package.xml
installed/share/humanoid_interface_ros/cmake/: humanoid_interface_ros-msg-extras.cmake  humanoid_interface_ros-msg-paths.cmake  humanoid_interface_rosConfig.cmake
installed/share/humanoid_interface_ros/launch/: humanoid_ddp.launch  humanoid_ddp_joy.launch  humanoid_ddp_with_arm.launch  humanoid_sqp.launch  humanoid_sqp_with_arm.launch  robot_version_manager.launch  robot_version_manager_with_arm.launch
installed/share/humanoid_interface_ros/msg/: uwbdebug.msg
installed/share/humanoid_interface_ros/rviz/: humanoid.rviz
installed/share/humanoid_interface_ros/rviz/scripts/: simStepControl.py
installed/share/humanoid_interface_ros/scripts/: armTrajTest.py  catch_bag_ik_srv_demo.py  catch_put_bag.py  joystickSimulator.py  plan_arm_traj_bezier_demo.py  pub_command.py  readme.md  simStepControl.py  simStepControl2.py  simStepControltest.py  walk_to_position.py  walk_to_position_interface.py
installed/share/humanoid_interface_ros/scripts/action_files/: 1.tact  Catch_bag2.tact
installed/share/humanoid_interface_ros/scripts/grabBox/: ikCmd.py
installed/share/humanoid_interface_ros/scripts/test/: hand_pub_test.py  wrench_publisher.py
scripts/: install_env_in_kuavoimg.sh
src/demo/gesture/: control_hand.py  gesture_client.py  number_gesture.py
src/demo/trace_path/: CMakeLists.txt  package.xml
src/humanoid-control/: README.md
src/humanoid-control/h12pro_controller_node/: CMakeLists.txt  README.md  ocs2_README.md
src/humanoid-control/humanoid_common/: CMakeLists.txt  package.xml
src/humanoid-control/humanoid_controllers/: CMakeLists.txt  package.xml
src/humanoid-control/humanoid_controllers/config/: log_topics.yaml
src/humanoid-control/humanoid_controllers/config/kuavo_v30/command/: gait.info
src/humanoid-control/humanoid_controllers/config/kuavo_v30/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v31/mpc/: dynamic_qr.info  task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v32/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v40/command/: reference.info
src/humanoid-control/humanoid_controllers/config/kuavo_v40/mpc/: dynamic_qr.info  task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v41/command/: reference.info
src/humanoid-control/humanoid_controllers/config/kuavo_v41/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v42/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v43/mpc/: task.info
src/humanoid-control/humanoid_controllers/include/humanoid_controllers/: SafetyChecker.h  humanoidController.h
src/humanoid-control/humanoid_controllers/launch/: load_kuavo_mujoco_sim.launch  load_kuavo_mujoco_sim_with_vr.launch  load_kuavo_real.launch  load_kuavo_real_half_up_body.launch  load_kuavo_real_with_vr.launch  robot_version_manager.launch
src/humanoid-control/humanoid_controllers/launch/joy/: bt2pro.json  joy_control_bt.launch  joy_control_h12.launch  sim.json
src/humanoid-control/humanoid_controllers/scripts/: csv2rosbag.py  rosbag_process.py  start_node.sh  system_info_publisher.py
src/humanoid-control/humanoid_controllers/src/: CheatControllerNode.cpp  TargetTrajectoriesPublisher.cpp  controllerNodelet.cpp  humanoidController.cpp  playBackNodelet.cpp
src/humanoid-control/humanoid_plan_arm_trajectory/: CMakeLists.txt  package.xml
src/kuavo_assets/: CMakeLists.txt  package.xml
src/kuavo_assets/models/: readme.md
src/kuavo_assets/scripts/: check_ecmaster_type.sh  modify_torso_mass.sh  modify_torso_mass_xml.sh  update_mass.sh
src/kuavo_monitor/: CMakeLists.txt
src/kuavo_monitor/cfg/: cfg.yaml
src/kuavo_msgs/: CMakeLists.txt
src/manipulation_nodes/kuavo_ros_interfaces/: CMakeLists.txt
src/manipulation_nodes/motion_capture_ik/: CMakeLists.txt  README.md  package.xml
src/manipulation_nodes/noitom_hi5_hand_udp_python/: CMakeLists.txt  build_proto.sh  package.xml  readme_quest.md  requirements.txt
src/manipulation_nodes/planarmwebsocketservice/: CMakeLists.txt  README.md  package.xml  requirements.txt
src/mujoco/: CMakeLists.txt  package.xml
src/mujoco/launch/: defaultQpos.yaml  mujoco_sim.launch  nodelet.launch  nodelet_with_arm.launch
src/mujoco/src/: mujoco_node.cc  mujoco_nodelet.cc
src/ocs2/ocs2_msgs/: CMakeLists.txt
(+258 files in other folders)
